--- a/style.css
+++ b/style.css
@@ -23,22 +23,18 @@ body {
   border-radius: 8px;
   overflow: hidden;
 }
-.container .card .card-img {
-  perspective: 1000px;
- /* Do an horizontal flip when you move the mouse over the flip box container */
- /* Position the front and back side */
- /* Style the front side (fallback if image is missing) */
- /* Style the back side */
-}
+
 .container .card .card-img .flip-card-inner {
   position: relative;
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
 }
 
+.card-img{
+  height: 17rem;
+  overflow: hidden;
+}
 .container .card .card-img .flip-card-front, .container .card .card-img .flip-card-back {
   position: absolute;
   width: 100%;
@@ -73,7 +69,6 @@ body {
 }
 .container .card .card-body {
   padding: 1rem;
-  margin-top: 17rem;
 }
 .container .card .card-body h3 {
   margin: 0;
